--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -1,11 +1,6 @@
 description: >
-  This is a sample executor using Docker and Node.
+  docker image with python 3.7.9
+
 docker:
-  - image: 'cimg/node:<<parameters.tag>>'
-parameters:
-  tag:
-    default: lts
-    description: >
-      Pick a specific circleci/node image variant:
-      https://hub.docker.com/r/cimg/node/tags
-    type: string
+  - image: circleci/python:3.7.9
+    environment: {PIPENV_VENV_IN_PROJECT: true}
